# boolinq

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  boolinq.sln  gather.rb
.github/workflows/: boolinq-test.yml
bench/: CMakeLists.txt  SpeedTest.cpp
benchmark/: CMakeLists.txt  SpeedTest.cpp
boolinq/: All.h  AllTest.cpp  Any.h  AnyTest.cpp  Avg.h  AvgTest.cpp  BitsRange.h  BitsRangeTest.cpp  BytesRange.h  BytesRangeTest.cpp  CMakeLists.txt  CastRange.h  CommonTests.h  ConcatRange.h  ConcatRangeTest.cpp  Contains.h  ContainsTest.cpp  Count.h  CountTest.cpp  DistinctRange.h  DistinctRangeTest.cpp  DotCallTest.cpp  ElementAt.h  ElementAtTest.cpp  Foreach.h  ForeachTest.cpp  GroupByRange.h  GroupByRangeTest.cpp  IterRange.h  IterRangeTest.cpp  LinqTest.cpp  Makefile  Makefile.benchmark  Makefile.test  Max.h  MaxTest.cpp  Min.h  MinTest.cpp  OrderByRange.h  OrderByRangeTest.cpp  (+34 more)
include/boolinq/: boolinq.h  boolinq_old.h
test/: AllTest.cpp  AnyTest.cpp  AppendTest.cpp  AvgTest.cpp  BitsRangeTest.cpp  BitsTest.cpp  BytesRangeTest.cpp  BytesTest.cpp  CMakeLists.txt  CommonTests.h  ConcatRangeTest.cpp  ConcatTest.cpp  ContainsTest.cpp  CountTest.cpp  CtorTest.cpp  DistinctRangeTest.cpp  DistinctTest.cpp  DotCallTest.cpp  ElementAtTest.cpp  FirstTest.cpp  ForEachTest.cpp  GroupByRangeTest.cpp  GroupByTest.cpp  GroupByTestComplex.cpp  IterRangeTest.cpp  LastTest.cpp  LinqTest.cpp  MaxTest.cpp  MinTest.cpp  OrderByRangeTest.cpp  OrderByTest.cpp  PrependTest.cpp  RangeTest.cpp  ReverseRangeTest.cpp  ReverseTest.cpp  SelectManyTest.cpp  SelectRangeTest.cpp  SelectTest.cpp  SkipRangeTest.cpp  SkipTest.cpp  (+24 more)
